@@ -64,9 +64,13 @@
                 <div class="cv-view-viewinfo-drill">
 
 
-                    <div ng-repeat="drilldown in view.params.drilldown" ng-if="view.params.mode != 'facts'" class="label label-secondary cv-infopiece cv-view-viewinfo-drill" style="color: black; background-color: #ccffcc;">
-                        <span><i class="fa fa-fw fa-arrow-down" title="Drilldown"></i> <b class="hidden-xs hidden-sm">Drilldown:</b> <span title="{{ view.cube.dimensionParts(drilldown).label }}">{{ view.cube.dimensionParts(drilldown).labelShort }}</span></span>
+                    <div ng-repeat="drilldown in view.params.drilldown" ng-init="parts = view.cube.dimensionParts(drilldown);" ng-if="view.params.mode != 'facts'" class="label label-secondary cv-infopiece cv-view-viewinfo-drill" style="color: black; background-color: #ccffcc;">
+                        <span><i class="fa fa-fw fa-arrow-down" title="Drilldown"></i> <b class="hidden-xs hidden-sm">Drilldown:</b> <span title="{{ view.cube.dimensionParts(drilldown).label }}">{{ parts.labelShort }}</span></span>
                         <button type="button" class="btn btn-info btn-xs" style="visibility: hidden; margin-left: -20px;"><i class="fa fa-fw fa-info"></i></button>
+
+                        <button ng-hide="view.getControlsHidden() || parts.hierarchy.levels.length < 2" ng-disabled="! parts.drilldownDimensionMinus" type="button" ng-click="selectDrill(parts.drilldownDimensionMinus, true)" class="btn btn-secondary btn-xs hidden-print" style="margin-left: 3px;"><i class="fa fa-fw fa-minus"></i></button>
+                        <button ng-hide="view.getControlsHidden() || parts.hierarchy.levels.length < 2" ng-disabled="! parts.drilldownDimensionPlus" type="button" ng-click="selectDrill(parts.drilldownDimensionPlus, true)" class="btn btn-secondary btn-xs hidden-print" style="margin-left: 0px;"><i class="fa fa-fw fa-plus"></i></button>
+
                         <button ng-hide="view.getControlsHidden()" type="button" ng-click="showDimensionFilter(drilldown)" class="btn btn-secondary btn-xs hidden-print" style="margin-left: 3px;"><i class="fa fa-fw fa-search"></i></button>
                         <button ng-hide="view.getControlsHidden()" type="button" ng-click="selectDrill(drilldown, '')" class="btn btn-danger btn-xs hidden-print" style="margin-left: 1px;"><i class="fa fa-fw fa-trash"></i></button>
                     </div>
@@ -99,6 +103,10 @@
                     <div ng-if="view.params.mode == 'series' || view.params.mode == 'chart'" class="label label-secondary cv-infopiece cv-view-viewinfo-extra" style="color: black; background-color: #ccddff;">
                         <span style="max-width: 350px;"><i class="fa fa-fw fa-long-arrow-right" title="Horizontal dimension"></i> <b class="hidden-xs hidden-sm">Horizontal dimension:</b> {{ (view.params.xaxis != null) ? view.cube.dimensionParts(view.params.xaxis).labelShort : "None" }}</span>
                         <button type="button" class="btn btn-info btn-xs" style="visibility: hidden; margin-left: -20px;"><i class="fa fa-fw fa-info"></i></button>
+
+                        <button ng-hide="view.getControlsHidden() || !view.params.xaxis || view.cube.dimensionParts(view.params.xaxis).hierarchy.levels.length < 2" ng-disabled="! view.cube.dimensionParts(view.params.xaxis).drilldownDimensionMinus" type="button" ng-click="selectXAxis(view.cube.dimensionParts(view.params.xaxis).drilldownDimensionMinus, true)" class="btn btn-secondary btn-xs hidden-print" style="margin-left: 3px;"><i class="fa fa-fw fa-minus"></i></button>
+                        <button ng-hide="view.getControlsHidden() || !view.params.xaxis || view.cube.dimensionParts(view.params.xaxis).hierarchy.levels.length < 2" ng-disabled="! view.cube.dimensionParts(view.params.xaxis).drilldownDimensionPlus" type="button" ng-click="selectXAxis(view.cube.dimensionParts(view.params.xaxis).drilldownDimensionPlus, true)" class="btn btn-secondary btn-xs hidden-print" style="margin-left: 0px;"><i class="fa fa-fw fa-plus"></i></button>
+
                         <!-- <button type="button" ng-click="showDimensionFilter(view.params.xaxis)" class="btn btn-secondary btn-xs" style="margin-left: 3px;"><i class="fa fa-fw fa-search"></i></button>  -->
                         <!-- <button type="button" ng-click="selectXAxis(null)" class="btn btn-danger btn-xs" style="margin-left: 1px;"><i class="fa fa-fw fa-trash"></i></button>  -->
                     </div>
