@@ -53,8 +53,8 @@
         <h2>CubesViewer View integrated in AngularJS app</h2>
 
         <p>
-        The view below is a CubesViewer view naturally loaded as an angular directive in this page (the data
-        comes from the Cubes <a href="https://github.com/jjmontesl/cubes-examples/tree/master/webshop">example webshop</a> project).
+        The view below is a CubesViewer view naturally loaded as an angular directive in this page (with data
+        from the Cubes <a href="https://github.com/jjmontesl/cubes-examples/tree/master/webshop">example webshop</a> project).
         </p>
 
         <div style="border: none; margin-top: 22px; margin-bottom: 22px;">
